--- a/src/components/find-address/styles.module.scss
+++ b/src/components/find-address/styles.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   background-image: linear-gradient(180.42deg, rgba(11, 174, 185, 0) 0.35%, #0BAEB9 113.26%), url('/find-address-cover.png');
 
-  @apply w-full h-screen;
+  @apply w-full h-screen bg-cover bg-no-repeat py-12 flex flex-col justify-end items-center;
 
 }
