--- a/src/components/find-address/styles.module.scss
+++ b/src/components/find-address/styles.module.scss
@@ -41,7 +41,7 @@
         @apply absolute left-0 right-0 bg-white pt-6 px-[72px] rounded-b-xl z-10 md:px-4;
 
         div {
-          @apply flex px-4 py-5 hover:bg-[#EAEEEF] text-[17px] text-secondary leading-6 sm:px-2 sm:py-3 xs:py-2 sm:text-[15px];
+          @apply flex px-4 py-5 hover:bg-[#EAEEEF] text-[17px] text-secondary leading-6 sm:px-2 sm:py-3 xs:py-2 sm:text-[15px] whitespace-pre flex-wrap;
 
           span {
             @apply font-semibold;
