--- a/src/components/find-address/styles.module.scss
+++ b/src/components/find-address/styles.module.scss
@@ -29,7 +29,7 @@
         }
   
         input {
-          @apply px-4 focus:outline-none focus:border-0 text-[#4E4E4E] text-xl font-normal w-full;
+          @apply px-4 focus:outline-none focus:border-0 text-[#4E4E4E] text-xl font-normal w-full border-0 outline-none focus:ring-0;
         }
   
         .clear {
