--- a/src/components/property-fraud/styles.module.scss
+++ b/src/components/property-fraud/styles.module.scss
@@ -33,18 +33,22 @@
           @apply w-[70px] h-[70px] rounded-full bg-white border border-[#EAEEEF] flex justify-center items-center;
 
           .arrow {
-            @apply w-6 h-6 text-grey-100;
+            @apply w-6 h-6 text-gray-100;
           }
         }
       }
     }
+  }
 
-    .carousel {
-      @apply grid grid-flow-col gap-6 max-w-full items-baseline overflow-auto;
+  .carousel {
+    @apply max-w-full overflow-auto scroll-smooth;
 
-      &::-webkit-scrollbar {
-        @apply hidden;
-      }
+    &::-webkit-scrollbar {
+      @apply hidden;
+    }
+
+    .carousel-inner {
+      @apply grid grid-flow-col gap-6 items-baseline w-fit mx-[calc((100%-1108px)/2)];
 
       > div {
         @apply w-[350px] rounded-xl bg-white overflow-hidden h-full;
@@ -77,7 +81,7 @@
           }
 
           p {
-            @apply text-grey-100 font-normal text-sm;
+            @apply text-gray-100 font-normal text-sm;
           }
         }
       }
