--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply w-full absolute lg:px-8 md:px-10 sm:px-6 xs:px-4;
+  @apply w-full absolute lg:px-8 md:px-10 sm:px-6 xs:px-4 z-50;
 
   .inner-wrapper {
     @apply xl:max-w-[1108px] h-[66px] mx-auto flex justify-between items-center;
@@ -8,10 +8,10 @@
       @apply grid grid-flow-col gap-6 h-full justify-items-center md:hidden;
   
       .nav-item {
-        @apply h-full flex items-center text-center text-white text-[15px];
+        @apply h-full flex items-center text-center text-white/80 text-[15px];
 
         &.active {
-          @apply border-b-2;
+          @apply border-b-2 border-white text-white;
         }
       }
     }
@@ -23,17 +23,45 @@
         @apply px-3 py-2 rounded-full text-[15px] font-medium sm:hidden;
   
         &.sign-in {
-          @apply text-white text-opacity-80;
+          @apply text-white/80;
         }
   
         &.register {
-          @apply bg-white text-[#4E4E4E];
+          @apply bg-white text-secondary;
         }
       }
 
       .menu-icon {
-        @apply hidden h-6 px-4 border-l-2 md:block sm:border-none;
+        @apply hidden h-6 px-4 border-l-2 border-[#D6D6D6] md:block sm:border-none;
       }
     }
+  }
+
+  &.sticky {
+    @apply bg-white fixed top-0;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
+    
+    .nav > .nav-item {
+      @apply text-secondary/80;
+
+      &.active {
+        @apply border-primary text-secondary;
+      }
+    }
+
+    .header-end {
+      .button {
+        &.sign-in {
+          @apply text-secondary;
+        }
+
+        &.register {
+          @apply bg-primary text-white;
+        }
+      }
+      .menu-icon {
+        @apply border-primary;
+      }
+    } 
   }
 }
