Add some corrections to the page

--- a/src/components/create-password/form/style.module.scss
+++ b/src/components/create-password/form/style.module.scss
@@ -2,7 +2,7 @@
   @apply mt-5;
 
   .nextButton {
-    @apply w-full bg-primary text-white text-body1 text-center py-3 mt-[6.75rem] rounded;
+    @apply w-full bg-primary text-white text-body1 text-center py-3 mt-[6.75rem] rounded disabled:opacity-60;
   }
 
   .error {
