--- a/src/components/phone-stepper/styles.module.scss
+++ b/src/components/phone-stepper/styles.module.scss
@@ -19,5 +19,5 @@
         @apply w-[111px] rounded-full h-1 mb-6 bg-[#EAEEEF] sm:left-[unset] sm:mx-auto;
     }
 
-    @apply w-full h-[100vh] bg-[#F4F8F9] flex flex-col justify-center items-center
+    @apply w-full h-[1308px] bg-[#F4F8F9] flex flex-col justify-center items-center
 }
