--- a/src/components/stepper/styles.module.scss
+++ b/src/components/stepper/styles.module.scss
@@ -11,5 +11,5 @@
 
 .stepper-wrapper {
   @apply flex w-[920px] justify-between gap-[100px] mt-[52px];
-  @apply md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-0 md:mt-5 sm:grid-cols-1 sm:gap-y-8;
+  @apply md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-0 md:max-w-full md:mt-5 sm:grid-cols-1 sm:gap-y-8;
 }
