--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -38,7 +38,7 @@
   }
 
   &.sticky {
-    @apply bg-white fixed top-0;
+    @apply bg-white fixed top-0 z-20;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
     
     .nav > .nav-item {
