--- a/src/components/register-property/styles.module.scss
+++ b/src/components/register-property/styles.module.scss
@@ -4,10 +4,22 @@
   .inner-wrapper {
     background-image: linear-gradient(177.48deg, rgba(11, 174, 185, 0) 32.27%, #0BAEB9 95.84%), url('/family.jpg');
 
-    @apply max-w-[1108px] h-[589px] mx-auto relative px-8 overflow-hidden lg:px-16 bg-cover bg-center bg-no-repeat flex flex-col justify-end;
+    @apply max-w-[1108px] h-[589px] rounded-xl mx-auto relative overflow-hidden bg-cover bg-center bg-no-repeat flex flex-col justify-end;
 
     .content {
-      @apply max-w-[726px] mx-auto mt-6 text-white/80 text-center mb-[62px];
+      @apply relative max-w-[726px] w-full mx-auto mt-6 text-white/80 text-center mb-[62px] md:max-w-[606px] sm:max-w-none sm:px-[45px] xs:px-0;
+
+      .icon-wrapper {
+        @apply absolute top-0 w-full lg:hidden;
+
+        img {
+          @apply mx-auto;
+        }
+      }
+
+      .text {
+        @apply text-[32px] font-medium sm:text-[26px];
+      }
     }
   }
 }
